[package]
name = "kthfinger"
version = "0.1.1"
description = "Get public info about people at KTH."
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
